--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -88,13 +88,19 @@
 
 .menu-social {
     display: flex;
-    gap: 20px;
+    gap: 10px;
 }
 
 .menu-social__item {
-    font-weight: 500;
-font-size: 18px;
-line-height: calc(22 / 18);
-letter-spacing: 0.02em;
-color: var(--third-text-color);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: calc(22 / 18);
+  letter-spacing: 0.02em;
+  color: var(--third-text-color);
+
+
+&:not(:last-child) {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
 }
