--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import './utils/visually-hidden';
 @import './utils/placeholders';
 @import './utils/mixins';
+@import './utils/card set';
 
 @import './components/base';
 @import './components/header';
@@ -15,5 +16,4 @@
 @import './components/footer';
 @import './components/modal';
 @import './components/portfolio';
-@import './components/card set';
 @import './components/menu';
