--- a/css/main.css
+++ b/css/main.css
@@ -1213,7 +1213,14 @@ body {
 }
 
 .card-list__link {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
   -webkit-transition: -webkit-box-shadow var(--anim-main);
   transition: -webkit-box-shadow var(--anim-main);
   transition: box-shadow var(--anim-main);
@@ -1264,6 +1271,9 @@ body {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: none;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .card-list__title {
