--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -65,8 +65,9 @@
   }
 
   .card-list__link {
-    display: block;
-  
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     transition: box-shadow var(--anim-main);
     
     &:hover,
@@ -110,6 +111,7 @@
     padding: 20px 24px;
     border: 1px solid #eeeeee;
     border-top: none;
+    flex-grow: 1;
   }
   
   .card-list__title {
