додав кнопку вгору

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,19 +1,20 @@
- @import './utils/vars';
-@import './utils/reset';
-@import './utils/visually-hidden';
-@import './utils/placeholders';
-@import './utils/mixins';
-@import './utils/card set';
+@import "./utils/vars";
+@import "./utils/reset";
+@import "./utils/visually-hidden";
+@import "./utils/placeholders";
+@import "./utils/mixins";
+@import "./utils/card set";
+@import "./utils/up button";
 
-@import './components/base';
-@import './components/header';
-@import './components/logo';
-@import './components/hero';
-@import './components/specials';
-@import './components/what';
-@import './components/team';
-@import './components/postiyni';
-@import './components/footer';
-@import './components/modal';
-@import './components/portfolio';
-@import './components/menu';
+@import "./components/base";
+@import "./components/header";
+@import "./components/logo";
+@import "./components/hero";
+@import "./components/specials";
+@import "./components/what";
+@import "./components/team";
+@import "./components/postiyni";
+@import "./components/footer";
+@import "./components/modal";
+@import "./components/portfolio";
+@import "./components/menu";
