--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,28 @@ img {
   }
 }
 
+.up__arrow {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+}
+
+.up__button .up__arrow {
+  width: 50px;
+  height: 50px;
+  background: var(--primary-text-color);
+  text-align: center;
+  display: block;
+  line-height: 50px;
+  border-radius: 50%;
+  color: var(--white-color);
+  -webkit-transition: var(--anim-main);
+  transition: var(--anim-main);
+}
+.up__button .up__arrow:hover, .up__button .up__arrow:focus {
+  background: var(--third-text-color);
+}
+
 body {
   font-family: "Roboto", "Arial", sans-serif;
 }
