--- a/css/main.css
+++ b/css/main.css
@@ -110,22 +110,26 @@ img {
   position: fixed;
   bottom: 30px;
   right: 30px;
+  fill: var(--third-background-color);
 }
 
 .up__button .up__arrow {
-  width: 50px;
-  height: 50px;
-  background: var(--primary-text-color);
+  width: 60px;
+  height: 60px;
+  background: var(--icons-background-color);
   text-align: center;
   display: block;
   line-height: 50px;
   border-radius: 50%;
-  color: var(--white-color);
   -webkit-transition: var(--anim-main);
   transition: var(--anim-main);
 }
 .up__button .up__arrow:hover, .up__button .up__arrow:focus {
   background: var(--third-text-color);
+  -webkit-box-shadow: 0px 10px 20px 5px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 10px 20px 5px rgba(0, 0, 0, 0.5);
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
 }
 
 body {
