--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,106 +1,107 @@
-  .menu-toggle {
-    min-height: 40px;
-    min-width: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-color: transparent;
-    background-color: transparent;
-    margin-left: auto;
-    padding: 0;
-    cursor: pointer;
-    border: none;
-    outline: none;
-  }
-  
-  @media (min-width: 768px) {
-    .menu-toggle {
-      display: none;
-    }
-  }
-  
-  .menu-toggle:hover,
-  .menu-toggle:focus {
-    fill: var(--button-active-color);
-  }
-  
-  .menu-container {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    padding: 48px 40px;
-    background-color: var(--white-color);
-    z-index: 999;
-  
-    transform: translateX(100%);
-    transition: transform var(--anim-main);
-  }
-  
-  .menu-container.is-open {
-    transform: translateX(0);
-  }
-  
+.menu-toggle {
+	min-height: 40px;
+	min-width: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-color: transparent;
+	background-color: transparent;
+	margin-left: auto;
+	padding: 0;
+	cursor: pointer;
+	border: none;
+	outline: none;
+}
+
+@media (min-width: 768px) {
+	.menu-toggle {
+		display: none;
+	}
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+	fill: var(--button-active-color);
+}
+
+.menu-container {
+	display: flex;
+	flex-direction: column;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding: 48px 40px;
+	background-color: var(--white-color);
+	z-index: 999;
+	overflow-y: auto;
+
+	transform: translateX(100%);
+	transition: transform var(--anim-main);
+}
+
+.menu-container.is-open {
+	transform: translateX(0);
+}
+
 .menu__close {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    }
-    
-    .menu-list {
-        margin-bottom: auto;
-    }
+	position: absolute;
+	top: 10px;
+	right: 15px;
+}
 
-    .menu-list__item {
-    font-weight: 500;
-    font-size: 40px;
-    line-height: calc(47 / 40);
-    letter-spacing: 0.02em;
-    color: var(--secondary-text-color);
-    margin-bottom: 32px;
+.menu-list {
+	margin-bottom: auto;
+}
 
-    &--current {
-        color: var(--third-text-color);
-    }
-   }
+.menu-list__item {
+	font-weight: 500;
+	font-size: 40px;
+	line-height: calc(47 / 40);
+	letter-spacing: 0.02em;
+	color: var(--secondary-text-color);
+	margin-bottom: 32px;
 
+	&--current {
+		color: var(--third-text-color);
+	}
+}
 
 .menu-contact__item {
-    font-weight: 500;
-    font-size: 34px;
-    line-height: calc(40 / 34);
-    letter-spacing: 0.02em;
-    color: var(--third-text-color);
-    margin-bottom: 32px;
+	font-weight: 500;
+	font-size: 34px;
+	line-height: calc(40 / 34);
+	letter-spacing: 0.02em;
+	color: var(--third-text-color);
+	margin-bottom: 32px;
 }
 
 .menu-contact__items {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: calc(28 / 24);
-    letter-spacing: 0.02em;
-    color: var(--primary-text-color);
-    margin-bottom: 64px;
+	font-weight: 500;
+	font-size: 24px;
+	line-height: calc(28 / 24);
+	letter-spacing: 0.02em;
+	color: var(--primary-text-color);
+	margin-bottom: 64px;
 }
 
 .menu-social {
-    display: flex;
-    gap: 10px;
+	display: flex;
+	row-gap: 20px;
+	column-gap: 10px;
+	flex-wrap: wrap;
 }
 
 .menu-social__item {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: calc(22 / 18);
-  letter-spacing: 0.02em;
-  color: var(--third-text-color);
+	font-weight: 500;
+	font-size: 18px;
+	line-height: calc(22 / 18);
+	letter-spacing: 0.02em;
+	color: var(--third-text-color);
 
-
-&:not(:last-child) {
-  padding-right: 10px;
-  border-right: 1px solid rgba(33, 33, 33, 0.2);
-}
+	&:not(:last-child) {
+		padding-right: 10px;
+		border-right: 1px solid rgba(33, 33, 33, 0.2);
+	}
 }
