--- a/css/main.css
+++ b/css/main.css
@@ -81,9 +81,6 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: var(--margin);
@@ -786,7 +783,8 @@ body {
   color: var(--third-text-color);
 }
 
-.group__text, .pidpyska__text {
+.group__text,
+.pidpyska__text {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1428571429;
@@ -924,6 +922,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  min-width: 320px;
   background-color: rgba(0, 0, 0, 0.2);
   -webkit-transition: opacity var(--anim-main), visibility var(--anim-main);
   transition: opacity var(--anim-main), visibility var(--anim-main);
@@ -941,8 +940,9 @@ body {
   padding: 40px;
   -webkit-transform: translateX(-50%) translateY(-50%) scale(1);
           transform: translateX(-50%) translateY(-50%) scale(1);
-  width: 450px;
-  height: 609px;
+  min-width: 280px;
+  max-width: 335px;
+  max-height: 80vh;
   background-color: var(--white-color);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1155,6 +1155,131 @@ body {
   background-color: var(--button-active-color);
 }
 
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-color: transparent;
+  background-color: transparent;
+  margin-left: auto;
+  padding: 0;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+.menu-toggle:hover,
+.menu-toggle:focus {
+  fill: var(--button-active-color);
+}
+
+.menu-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 48px 40px;
+  background-color: var(--white-color);
+  z-index: 999;
+  overflow-y: auto;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform var(--anim-main);
+  transition: -webkit-transform var(--anim-main);
+  transition: transform var(--anim-main);
+  transition: transform var(--anim-main), -webkit-transform var(--anim-main);
+}
+
+.menu-container.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.menu__close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+.menu-list {
+  margin-bottom: auto;
+}
+
+.menu-list__item {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+  margin-bottom: 32px;
+}
+.menu-list__item--current {
+  color: var(--third-text-color);
+}
+
+.menu-contact__item {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.1764705882;
+  letter-spacing: 0.02em;
+  color: var(--third-text-color);
+  margin-bottom: 32px;
+}
+
+.menu-contact__items {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  margin-bottom: 64px;
+}
+
+.menu-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  row-gap: 20px;
+  -webkit-column-gap: 10px;
+     -moz-column-gap: 10px;
+          column-gap: 10px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.menu-social__item {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
+  color: var(--third-text-color);
+}
+.menu-social__item:not(:last-child) {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
 .portfolio__container {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1229,12 +1354,12 @@ body {
 
 @media screen and (min-width: 768px) {
   .card-list__item {
-    --item:2;
+    --item: 2;
   }
 }
 @media screen and (min-width: 1200px) {
   .card-list__item {
-    --item:3;
+    --item: 3;
   }
 }
 
@@ -1316,123 +1441,4 @@ body {
   line-height: 1.875;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
-}
-
-.menu-toggle {
-  min-height: 40px;
-  min-width: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  border-color: transparent;
-  background-color: transparent;
-  margin-left: auto;
-  padding: 0;
-  cursor: pointer;
-  border: none;
-  outline: none;
-}
-
-@media (min-width: 768px) {
-  .menu-toggle {
-    display: none;
-  }
-}
-.menu-toggle:hover,
-.menu-toggle:focus {
-  fill: var(--button-active-color);
-}
-
-.menu-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 48px 40px;
-  background-color: var(--white-color);
-  z-index: 999;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-  -webkit-transition: -webkit-transform var(--anim-main);
-  transition: -webkit-transform var(--anim-main);
-  transition: transform var(--anim-main);
-  transition: transform var(--anim-main), -webkit-transform var(--anim-main);
-}
-
-.menu-container.is-open {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-}
-
-.menu__close {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-}
-
-.menu-list {
-  margin-bottom: auto;
-}
-
-.menu-list__item {
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.175;
-  letter-spacing: 0.02em;
-  color: var(--secondary-text-color);
-  margin-bottom: 32px;
-}
-.menu-list__item--current {
-  color: var(--third-text-color);
-}
-
-.menu-contact__item {
-  font-weight: 500;
-  font-size: 34px;
-  line-height: 1.1764705882;
-  letter-spacing: 0.02em;
-  color: var(--third-text-color);
-  margin-bottom: 32px;
-}
-
-.menu-contact__items {
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 1.1666666667;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-  margin-bottom: 64px;
-}
-
-.menu-social {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 10px;
-}
-
-.menu-social__item {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 1.2222222222;
-  letter-spacing: 0.02em;
-  color: var(--third-text-color);
-}
-.menu-social__item:not(:last-child) {
-  padding-right: 10px;
-  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }/*# sourceMappingURL=main.css.map */
