--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,182 +1,183 @@
 .footer {
-  background-color: var(--third-background-color);
+	background-color: var(--third-background-color);
 }
 
 .footer__container {
-  @extend %container;
-  @include section(60px, 60px);
-  @media screen and (max-width: 1199.9px) {
-    text-align: center;
-  }
-  
-  @media screen and (min-width:768px) {
-    width: 768px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  @media screen and (min-width:1200px) {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    width: 1200px;
-  }
+	@extend %container;
+	@include section(60px, 60px);
+	@media screen and (max-width: 1199.9px) {
+		text-align: center;
+	}
+
+	@media screen and (min-width: 768px) {
+		width: 768px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	@media screen and (min-width: 1200px) {
+		display: flex;
+		justify-content: space-between;
+		align-items: baseline;
+		width: 1200px;
+	}
 }
 
 .footer__credentials {
-  @media screen and (min-width:768px) {
-    display: flex;
-  justify-content: space-around;
-  align-items: baseline;
-  }
+	@media screen and (min-width: 768px) {
+		display: flex;
+		justify-content: space-around;
+		align-items: baseline;
+	}
 
-  @media screen and (min-width:1200px) {
-    display: flex;
-    align-items: baseline;
-  }
+	@media screen and (min-width: 1200px) {
+		display: flex;
+		align-items: baseline;
+	}
 }
 
 .address {
-  @media screen and (max-width:1199.9px) {
-    margin-bottom: 60px;
-  }
- 
-  @media screen and (min-width:1200px){
-  margin-right: 70px;
-  }
-  margin-top: 20px;
-  font-style: normal;
+	@media screen and (max-width: 1199.9px) {
+		margin-bottom: 60px;
+	}
+
+	@media screen and (min-width: 1200px) {
+		margin-right: 70px;
+	}
+	margin-top: 20px;
+	font-style: normal;
 }
 
 .address__link {
-  font-size: 14px;
-  line-height: calc(24 / 14);
-  letter-spacing: 0.03em;
-  color: var(--white-color);
+	font-size: 14px;
+	line-height: calc(24 / 14);
+	letter-spacing: 0.03em;
+	color: var(--white-color);
 
-  transition: color var(--anim-main);
+	transition: color var(--anim-main);
 
-  &:hover,
-  &:focus {
-  color: var(--third-text-color);
-  }
+	&:hover,
+	&:focus {
+		color: var(--third-text-color);
+	}
 }
 
 .address__links {
-  font-size: 14px;
-  line-height: calc(24 / 14);
-  letter-spacing: 0.03em;
-  margin-bottom: 9px;
-  color: rgba(255, 255, 255, 0.6);
+	font-size: 14px;
+	line-height: calc(24 / 14);
+	letter-spacing: 0.03em;
+	margin-bottom: 9px;
+	color: rgba(255, 255, 255, 0.6);
 
-  transition: color var(--anim-main);
+	transition: color var(--anim-main);
 
-  &:hover,
-  &:focus {
-  color: var(--third-text-color);
-  }
+	&:hover,
+	&:focus {
+		color: var(--third-text-color);
+	}
 }
 
-.group__text, .pidpyska__text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: calc(16 / 14);
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  color: var(--white-color);
+.group__text,
+.pidpyska__text {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: calc(16 / 14);
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+	margin-bottom: 20px;
+	color: var(--white-color);
 }
 
 .group__list {
-  display: flex;
-  justify-content: center;
-  @media screen and (max-width:1199.9px) {
-    margin-bottom: 60px;
-  }
+	display: flex;
+	justify-content: center;
+	@media screen and (max-width: 1199.9px) {
+		margin-bottom: 60px;
+	}
 }
 
 .group__item:not(:last-child) {
-  margin-right: 10px;
+	margin-right: 10px;
 }
 
 .group__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-  transition: background-color var(--anim-main);
-  &:hover,
-  &:focus {
-  background-color: var(--third-text-color);
-  }
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 44px;
+	height: 44px;
+	border-radius: 50%;
+	background-color: rgba(255, 255, 255, 0.1);
+	transition: background-color var(--anim-main);
+	&:hover,
+	&:focus {
+		background-color: var(--third-text-color);
+	}
 }
 
 .group__icon {
-  fill: var(--white-color);
+	fill: var(--white-color);
 }
 
 .pidpyska__form {
-  @media screen and (min-width:1200px) {
-    display: flex;
-    align-items: center;
-  }
+	@media screen and (min-width: 1200px) {
+		display: flex;
+		align-items: center;
+	}
 }
 
 .pidpyska__field {
-  @media screen and(max-width:1199.9px) {
-    width: 450px;
-    margin-bottom: 20px;
-  }
-  
-  @media screen and (min-width:1200px) {
-    width: 358px;
-    height: 50px;
-    margin-right: 12px;
-  } 
-  padding: 16px;
-  color: var(--white-color);
-  outline: unset;
-  background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
-  border-radius: 4px;
-  transition: border-color var(--anim-main);
+	@media screen and (max-width: 1199.9px) {
+		width: 450px;
+		margin-bottom: 20px;
+	}
+
+	@media screen and (min-width: 1200px) {
+		width: 358px;
+		height: 50px;
+		margin-right: 12px;
+	}
+	padding: 16px;
+	color: var(--white-color);
+	outline: unset;
+	background-color: transparent;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	transition: border-color var(--anim-main);
 }
 
 .pidpyska__field:focus {
-  border-color: var(--third-text-color);
+	border-color: var(--third-text-color);
 }
 
 .pidpyska__button {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 200px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: calc(30/16);
-  letter-spacing: 0.06em;
-  padding: 10px 28px;
-  border: none;
-  color: var(--white-color);
-  background-color: var(--third-text-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 200px;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: calc(30 / 16);
+	letter-spacing: 0.06em;
+	padding: 10px 28px;
+	border: none;
+	color: var(--white-color);
+	background-color: var(--third-text-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	cursor: pointer;
 
-  @media screen and (max-width:1199.9px) {
-    margin-right: auto;
-    margin-left: auto;
-  }
+	@media screen and (max-width: 1199.9px) {
+		margin-right: auto;
+		margin-left: auto;
+	}
 
-  &:hover, 
-  &:focus {
-  background-color: var(--button-active-color)
-  }
+	&:hover,
+	&:focus {
+		background-color: var(--button-active-color);
+	}
 }
- 
+
 .pidpyska__icon {
-  fill: var(--white-color);
+	fill: var(--white-color);
 }
