--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,206 +1,208 @@
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-  
-    transition: opacity var(--anim-main), visibility var(--anim-main);
-  
-    &--is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-    }
-  }
-  
-  .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    padding: 40px;
-    transform: translateX(-50%) translateY(-50%) scale(1);
-    width: 450px;
-    height: 609px;
-    @media screen and (min-width:1200px) {
-      width: 528px;
-      height: 581px;
-    }
-    background-color: var(--white-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-  
-    transition: transform var(--anim-main), opasity var(--anim-main);
-    
-    .backdrop--is-hidden & {
-    opacity: 0;
-    transform: translateX(-50%) translateY(-50%) scale(0.5);
-    }
-  }
-  
-  .modal__btn {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    width: 30px;
-    height: 30px;
-    background-color: transparent;
-    border-radius: 50%;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-  
-    transition: fill var(--anim-main);
-  
-    &:hover,
-    &:focus {
-    fill: var(--third-text-color);
-    }
-  }
-  
-  .modal__label {
-    display: block;
-    text-align: center;
-    margin-bottom: 12px;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: calc(23/20);
-    letter-spacing: 0.03em;
-    color: var(--secondary-text-color);
-  }
-  
-  .modal-form__label {
-    display: block;
-    margin-bottom: 10px;
-    font-size: 12px;
-    line-height: calc(14/12);
-    letter-spacing: 0.01em;
-    color: var(--primary-text-color);
-  }
-  
-  .modal-form__wrapper {
-    position: relative;
-    
-  }
-  
-  .modal-form__field {
-    width: 100%;
-    height: 40px;
-    padding-left: 42px;
-    padding-right: 42px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    transition: border-color var(--anim-main);
-  }
-  
-  .modal-form__field:focus {
-    border-color: var(--third-text-color);
-    outline: transparent;
-  }
-  
-  .modal-form__item {
-    margin-bottom: 20px;
-  }
-  
-  .modal-form__icon {
-    position: absolute;
-    top:50%;
-    left:12px;
-    transform: translateY(-50%);
-    transition: fill var(--anim-main);
-   
-    .modal-form__field:focus + & {
-    fill: var(--third-text-color);
-    }
-  }
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	min-width: 320px;
+	background-color: rgba(0, 0, 0, 0.2);
 
-  .modal-form__text {
-    display: block;
-    width: 100%;
-    height: 120px;
-    padding: 12px 16px;
-    font-size: 12px;
-    line-height: calc(14/12);
-    letter-spacing: 0.01em;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    transition: border-color var(--anim-main);
-    resize: none;
-  
-    &::placeholder {
-    color: rgba(117, 117, 117, 0.5);
-    }
-  
-    &:focus {
-    border-color: var(--third-text-color);
-    outline: transparent;
-    }
-  }
+	transition: opacity var(--anim-main), visibility var(--anim-main);
 
-  .modal-form__group {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 7px;
-    margin-bottom: 30px;
-  }
-  
-  .modal-form__agree {
-    font-size: 14px;
-    line-height: calc(24/14);
-    letter-spacing: 0.03em;
-    color: var(--primary-text-color);
-    user-select: none;
-  }
-  
-  .modal-form__link {
-    color: var(--third-text-color);
-    text-underline-position: under;
-  }
-  
-  .modal-form__checkbox {
-    appearance: none;
-    width: 16px;
-    height: 15px;
-    border: 2px solid rgba(33, 33, 33, 1);
-    border-radius: 2px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 0;
-    background-image: url("data:image/svg+xml,%3Csvg width='13' height='10' viewBox='0 0 13 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.95703 4.75166L1.88825 4.68604L1.81923 4.75141L0.93123 5.59258L0.854858 5.66492L0.930974 5.73753L4.42671 9.07236L4.49574 9.1382L4.56476 9.07236L12.069 1.91352L12.1449 1.84116L12.069 1.76881L11.1873 0.927644L11.1183 0.861826L11.0493 0.927611L4.49577 7.17353L1.95703 4.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E");
-    transition: background-size var(--anim-main), background-color var(--anim-main);
-    
-    &:checked {
-    outline:transparent;
-    border: 2px solid var(--third-text-color);
-    background-color: var(--third-text-color);
-    background-size: 11px 8px;
-    }
-  }
-  
-  .modal-form__button {
-    display: block;
-    margin: auto;
-    width: 200px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: calc(30/16);
-    letter-spacing: 0.06em;
-    padding: 10px 28px;
-    border: none;
-    color: var(--white-color);
-    background-color: var(--third-text-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    cursor: pointer;
-  
-  
-    &:hover, 
-    &:focus {
-    background-color: var(--button-active-color)
-    }
-  }
+	&--is-hidden {
+		opacity: 0;
+		visibility: hidden;
+		pointer-events: none;
+	}
+}
+
+.modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	padding: 40px;
+	transform: translateX(-50%) translateY(-50%) scale(1);
+	min-width: 280px;
+	max-width: 335px;
+	max-height: 80vh;
+	@media screen and (min-width: 1200px) {
+		width: 528px;
+		height: 581px;
+	}
+	background-color: var(--white-color);
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+		0px 2px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+
+	transition: transform var(--anim-main), opasity var(--anim-main);
+
+	.backdrop--is-hidden & {
+		opacity: 0;
+		transform: translateX(-50%) translateY(-50%) scale(0.5);
+	}
+}
+
+.modal__btn {
+	position: absolute;
+	top: 8px;
+	right: 8px;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0;
+	width: 30px;
+	height: 30px;
+	background-color: transparent;
+	border-radius: 50%;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	cursor: pointer;
+
+	transition: fill var(--anim-main);
+
+	&:hover,
+	&:focus {
+		fill: var(--third-text-color);
+	}
+}
+
+.modal__label {
+	display: block;
+	text-align: center;
+	margin-bottom: 12px;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: calc(23 / 20);
+	letter-spacing: 0.03em;
+	color: var(--secondary-text-color);
+}
+
+.modal-form__label {
+	display: block;
+	margin-bottom: 10px;
+	font-size: 12px;
+	line-height: calc(14 / 12);
+	letter-spacing: 0.01em;
+	color: var(--primary-text-color);
+}
+
+.modal-form__wrapper {
+	position: relative;
+}
+
+.modal-form__field {
+	width: 100%;
+	height: 40px;
+	padding-left: 42px;
+	padding-right: 42px;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+	transition: border-color var(--anim-main);
+}
+
+.modal-form__field:focus {
+	border-color: var(--third-text-color);
+	outline: transparent;
+}
+
+.modal-form__item {
+	margin-bottom: 20px;
+}
+
+.modal-form__icon {
+	position: absolute;
+	top: 50%;
+	left: 12px;
+	transform: translateY(-50%);
+	transition: fill var(--anim-main);
+
+	.modal-form__field:focus + & {
+		fill: var(--third-text-color);
+	}
+}
+
+.modal-form__text {
+	display: block;
+	width: 100%;
+	height: 120px;
+	padding: 12px 16px;
+	font-size: 12px;
+	line-height: calc(14 / 12);
+	letter-spacing: 0.01em;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+	transition: border-color var(--anim-main);
+	resize: none;
+
+	&::placeholder {
+		color: rgba(117, 117, 117, 0.5);
+	}
+
+	&:focus {
+		border-color: var(--third-text-color);
+		outline: transparent;
+	}
+}
+
+.modal-form__group {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 7px;
+	margin-bottom: 30px;
+}
+
+.modal-form__agree {
+	font-size: 14px;
+	line-height: calc(24 / 14);
+	letter-spacing: 0.03em;
+	color: var(--primary-text-color);
+	user-select: none;
+}
+
+.modal-form__link {
+	color: var(--third-text-color);
+	text-underline-position: under;
+}
+
+.modal-form__checkbox {
+	appearance: none;
+	width: 16px;
+	height: 15px;
+	border: 2px solid rgba(33, 33, 33, 1);
+	border-radius: 2px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 0;
+	background-image: url("data:image/svg+xml,%3Csvg width='13' height='10' viewBox='0 0 13 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.95703 4.75166L1.88825 4.68604L1.81923 4.75141L0.93123 5.59258L0.854858 5.66492L0.930974 5.73753L4.42671 9.07236L4.49574 9.1382L4.56476 9.07236L12.069 1.91352L12.1449 1.84116L12.069 1.76881L11.1873 0.927644L11.1183 0.861826L11.0493 0.927611L4.49577 7.17353L1.95703 4.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E");
+	transition: background-size var(--anim-main),
+		background-color var(--anim-main);
+
+	&:checked {
+		outline: transparent;
+		border: 2px solid var(--third-text-color);
+		background-color: var(--third-text-color);
+		background-size: 11px 8px;
+	}
+}
+
+.modal-form__button {
+	display: block;
+	margin: auto;
+	width: 200px;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: calc(30 / 16);
+	letter-spacing: 0.06em;
+	padding: 10px 28px;
+	border: none;
+	color: var(--white-color);
+	background-color: var(--third-text-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	cursor: pointer;
+
+	&:hover,
+	&:focus {
+		background-color: var(--button-active-color);
+	}
+}
