--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,131 +1,131 @@
- 
-  .portfolio__container {
-    @include section(60px, 60px);
-    @media screen and (min-width:1200px) {
-      @include section(94px, 94px);
-    }
-    @extend %container;
-  }
+.portfolio__container {
+	@include section(60px, 60px);
+	@media screen and (min-width: 1200px) {
+		@include section(94px, 94px);
+	}
+	@extend %container;
+}
 
-  .btn__list {
-    @media screen and (min-width:480px) and (max-width:767.9px){
-    width: 326px;
-    }
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: left;
-    gap: 8px;
-    margin-bottom: 40px;
-    @media screen and (min-width:768px) {
-      flex-wrap: nowrap;
-      justify-content: center;
-      margin-bottom: 30px;
-    }
-    @media screen and (min-width:1200px) {
-      margin-bottom: 50px;
-    }
-  }
-  
-  .btn__portfolio {
-    display: inline-block;
-    font-family: inherit;
-    background: var(--secondary-background-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: calc(26 / 16);
-    letter-spacing: 0.03em;
-    color: var(--secondary-text-color);
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    padding: 6px 22px;
+.btn__list {
+	@media screen and (min-width: 480px) and (max-width: 767.9px) {
+		width: 326px;
+	}
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: left;
+	gap: 8px;
+	margin-bottom: 40px;
+	@media screen and (min-width: 768px) {
+		flex-wrap: nowrap;
+		justify-content: center;
+		margin-bottom: 30px;
+	}
+	@media screen and (min-width: 1200px) {
+		margin-bottom: 50px;
+	}
+}
 
-    transition: color var(--anim-main),
-    background-color var(--anim-main),
-    box-shadow var(--anim-main);
-    
-    &:hover,
-    &:focus {
-    color: var(--white-color);
-    background-color: var(--third-text-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-    }
-  }
+.btn__portfolio {
+	display: inline-block;
+	font-family: inherit;
+	background: var(--secondary-background-color);
+	font-weight: 500;
+	font-size: 16px;
+	line-height: calc(26 / 16);
+	letter-spacing: 0.03em;
+	color: var(--secondary-text-color);
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	padding: 6px 22px;
 
-  .card-list__item {
-    @media screen and (min-width: 768px) {
-      --item:2;
-    }
+	transition: color var(--anim-main), background-color var(--anim-main),
+		box-shadow var(--anim-main);
 
-    @media screen and (min-width: 1200px) {
-      --item:3;
-    }
-  }
+	&:hover,
+	&:focus {
+		color: var(--white-color);
+		background-color: var(--third-text-color);
+		box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+			0px 2px 2px rgba(0, 0, 0, 0.12);
+	}
+}
 
-  .card-list__link {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    transition: box-shadow var(--anim-main);
-    
-    &:hover,
-    &:focus {
-    box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
-    }
-  }
-  
-  .card-list__thumb {
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .card-list__overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translateY(100%);
-  
-    width: 100%;
-    height: 100%;
-    padding-left: 23px;
-    padding-right: 23px;
-    display: flex;
-    align-items: center;
-  
-    font-size: 18px;
-    line-height: calc(28 / 18);
-    letter-spacing: 0.03em;
-    color: var(--white-color);
-    background-color: rgba(33, 150, 243, 0.9);
-  
-    transition: transform var(--anim-main);
-  
-    .card-list__item:hover & {
-    transform: translateY(0);
-    }
-  }
-  
-  .card-list__about {
-    padding: 20px 24px;
-    border: 1px solid #eeeeee;
-    border-top: none;
-    flex-grow: 1;
-  }
-  
-  .card-list__title {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    margin-bottom: 4px;
-    color: var(--secondary-text-color);
-  }
-  
-  .card-list__text {
-    font-size: 16px;
-    line-height: calc(30 / 16);
-    letter-spacing: 0.03em;
-    color: var(--primary-text-color);
-  }
+.card-list__item {
+	// display: block;
+	// float: left;
+	@media screen and (min-width: 768px) {
+		--item: 2;
+	}
+
+	@media screen and (min-width: 1200px) {
+		--item: 3;
+	}
+}
+
+.card-list__link {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	transition: box-shadow var(--anim-main);
+
+	&:hover,
+	&:focus {
+		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	}
+}
+
+.card-list__thumb {
+	position: relative;
+	overflow: hidden;
+}
+
+.card-list__overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	transform: translateY(100%);
+
+	width: 100%;
+	height: 100%;
+	padding-left: 23px;
+	padding-right: 23px;
+	display: flex;
+	align-items: center;
+
+	font-size: 18px;
+	line-height: calc(28 / 18);
+	letter-spacing: 0.03em;
+	color: var(--white-color);
+	background-color: rgba(33, 150, 243, 0.9);
+
+	transition: transform var(--anim-main);
+
+	.card-list__item:hover & {
+		transform: translateY(0);
+	}
+}
+
+.card-list__about {
+	padding: 20px 24px;
+	border: 1px solid #eeeeee;
+	border-top: none;
+	flex-grow: 1;
+}
+
+.card-list__title {
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 2;
+	letter-spacing: 0.06em;
+	margin-bottom: 4px;
+	color: var(--secondary-text-color);
+}
+
+.card-list__text {
+	font-size: 16px;
+	line-height: calc(30 / 16);
+	letter-spacing: 0.03em;
+	color: var(--primary-text-color);
+}
