--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -26,8 +26,8 @@
 	max-width: 335px;
 	max-height: 80vh;
 	@media screen and (min-width: 1200px) {
-		width: 528px;
-		height: 581px;
+		min-width: 528px;
+		min-height: 581px;
 	}
 	background-color: var(--white-color);
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
