--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,12 +1,11 @@
-.asda {
+.contacts-form {
   min-width: 280px;
   max-width: 335px;
-  max-height: 80vh;
-  background-color: var(--white-color);
+  background-color: tomato;
 }
 @media screen and (min-width: 1200px) {
-  .asda {
-    min-width: 528px;
-    min-height: 581px;
+  .contacts-form {
+    width: 528px;
+    height: 581px;
   }
 }/*# sourceMappingURL=contacts.css.map */
