--- a/css/main.css
+++ b/css/main.css
@@ -59,24 +59,24 @@ html {
   margin: -1px;
 }
 
-.portfolio__container, .footer__container, .clients__container, .team__container, .what-container, .special__container, .hero__container, .header__container {
+.contacts-container, .portfolio__container, .footer__container, .clients__container, .team__container, .what-container, .special__container, .hero__container, .header__container {
   padding-right: 15px;
   padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
 }
 @media screen and (min-width: 480px) {
-  .portfolio__container, .footer__container, .clients__container, .team__container, .what-container, .special__container, .hero__container, .header__container {
+  .contacts-container, .portfolio__container, .footer__container, .clients__container, .team__container, .what-container, .special__container, .hero__container, .header__container {
     width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
-  .portfolio__container, .footer__container, .clients__container, .team__container, .what-container, .special__container, .hero__container, .header__container {
+  .contacts-container, .portfolio__container, .footer__container, .clients__container, .team__container, .what-container, .special__container, .hero__container, .header__container {
     width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .portfolio__container, .footer__container, .clients__container, .team__container, .what-container, .special__container, .hero__container, .header__container {
+  .contacts-container, .portfolio__container, .footer__container, .clients__container, .team__container, .what-container, .special__container, .hero__container, .header__container {
     width: 1200px;
   }
 }
@@ -423,12 +423,12 @@ body {
 
 @media screen and (min-width: 768px) {
   .special__list {
-    --item:2;
+    --item: 2;
   }
 }
 @media screen and (min-width: 1200px) {
   .special__list {
-    --item:4;
+    --item: 4;
   }
 }
 
@@ -1027,7 +1027,6 @@ body {
   -webkit-transition: border-color var(--anim-main);
   transition: border-color var(--anim-main);
 }
-
 .modal-form__field:focus {
   border-color: var(--third-text-color);
   outline: transparent;
@@ -1443,4 +1442,206 @@ body {
   line-height: 1.875;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+}
+
+.contacts-container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .contacts-container {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+.contacts-form {
+  min-width: 280px;
+  max-width: 335px;
+  margin: 0 auto;
+  background-color: var(--white-color);
+}
+@media screen and (min-width: 1200px) {
+  .contacts-form {
+    min-width: 528px;
+    min-height: 581px;
+  }
+}
+
+.contacts__label {
+  display: block;
+  text-align: center;
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+}
+
+.contacts-form__label {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 12px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+}
+
+.contacts-form__wrapper {
+  position: relative;
+}
+
+.contacts-form__field {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  padding-right: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  -webkit-transition: border-color var(--anim-main);
+  transition: border-color var(--anim-main);
+}
+.contacts-form__field:focus {
+  border-color: var(--third-text-color);
+  outline: transparent;
+}
+
+.contacts-form__item {
+  margin-bottom: 20px;
+}
+
+.contacts-form__icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: fill var(--anim-main);
+  transition: fill var(--anim-main);
+}
+.modal-form__field:focus + .contacts-form__icon {
+  fill: var(--third-text-color);
+}
+
+.contacts-form__text {
+  display: block;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  font-size: 12px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.01em;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  -webkit-transition: border-color var(--anim-main);
+  transition: border-color var(--anim-main);
+  resize: none;
+}
+.contacts-form__text::-webkit-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.contacts-form__text::-moz-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.contacts-form__text:-ms-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.contacts-form__text::-ms-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.contacts-form__text::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.contacts-form__text:focus {
+  border-color: var(--third-text-color);
+  outline: transparent;
+}
+
+.contacts-form__group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 7px;
+  margin-bottom: 30px;
+}
+
+.contacts-form__agree {
+  font-size: 14px;
+  line-height: 1.7142857143;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.contacts-form__link {
+  color: var(--third-text-color);
+  text-underline-position: under;
+}
+
+.contacts-form__checkbox {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  width: 16px;
+  height: 15px;
+  border: 2px solid rgb(33, 33, 33);
+  border-radius: 2px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 0;
+  background-image: url("data:image/svg+xml,%3Csvg width='13' height='10' viewBox='0 0 13 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.95703 4.75166L1.88825 4.68604L1.81923 4.75141L0.93123 5.59258L0.854858 5.66492L0.930974 5.73753L4.42671 9.07236L4.49574 9.1382L4.56476 9.07236L12.069 1.91352L12.1449 1.84116L12.069 1.76881L11.1873 0.927644L11.1183 0.861826L11.0493 0.927611L4.49577 7.17353L1.95703 4.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E");
+  -webkit-transition: background-size var(--anim-main), background-color var(--anim-main);
+  transition: background-size var(--anim-main), background-color var(--anim-main);
+}
+.contacts-form__checkbox:checked {
+  outline: transparent;
+  border: 2px solid var(--third-text-color);
+  background-color: var(--third-text-color);
+  background-size: 11px 8px;
+}
+
+.contacts-form__button {
+  display: block;
+  margin: auto;
+  width: 200px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  padding: 10px 28px;
+  border: none;
+  color: var(--white-color);
+  background-color: var(--third-text-color);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.contacts-form__button:hover, .contacts-form__button:focus {
+  background-color: var(--button-active-color);
+}
+
+.contacts-map {
+  min-width: 280px;
+  max-width: 335px;
+}
+@media screen and (min-width: 1200px) {
+  .contacts-map {
+    max-width: 528px;
+    min-height: 581px;
+  }
+}
+
+.contacts-map__iframe {
+  margin: 0 auto;
 }/*# sourceMappingURL=main.css.map */
